--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ header {
   justify-content: space-between;
   align-items: center;
 
+  box-sizing: border-box;
+
   /* background-color: #eee; */
   padding: 0rem 2rem;
 }
@@ -60,8 +62,8 @@ a:active {
 }
 
 .nav-bar {
-  display: block;
-  position: relative;
+  /* display: block; */
+  /* position: relative; */
 }
 
 .drawer-header {
@@ -88,9 +90,6 @@ a:active {
 .menu-btn {
   border: none;
   display: none;
-
-  text-align: center;
-  vertical-align: bottom;
 }
 
 .close-btn {
@@ -285,13 +284,37 @@ footer span {
   font-weight: bold;
 }
 
+.nav-bar {
+  /* display: none; */
+  position: fixed;
+  top: 0;
+  left: -250px;
+  /* width: 75%; */
+  width: 250px;
+  height: 100vh;
+  background-color: #fff;
+  box-shadow: 1px 1px rgba(0, 0, 0, 0.25);
+  border-radius: 0rem 1rem 1rem 0rem;
+  padding-left: 1rem;
+}
+
+.nav-bar.open {
+  left: 0;
+}
+
 @media (max-width: 576px) {
   html {
     font-size: 0.875rem;
   }
   .menu-btn,
   .close-btn {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    /* vertical-align: bottom; */
+    justify-content: center;
+    height: 100%;
+    align-items: center;
   }
 
   .menu-btn {
@@ -319,15 +342,25 @@ footer span {
   }
 
   .nav-bar {
-    display: none;
-    position: absolute;
+    /* display: none; */
+    position: fixed;
     top: 0;
-    left: 0;
-    width: 50%;
+    left: -250px;
+    /* width: 75%; */
+    width: 250px;
     height: 100vh;
     background-color: #fff;
     box-shadow: 1px 1px rgba(0, 0, 0, 0.25);
     border-radius: 0rem 1rem 1rem 0rem;
+    padding-left: 1rem;
+  }
+
+  .nav-bar.open {
+    left: 0;
+  }
+
+  .contact {
+    display: none;
   }
 
   .nav-items {
@@ -336,14 +369,31 @@ footer span {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 1rem;
+    align-items: center;
+    padding-left: 1rem;
+    padding-right: 0.5rem;
 
-    gap: 4rem;
+    gap: 3rem;
     font-size: 1.25rem;
   }
 
   ul li {
     font-weight: bold;
+    /* vertical-align: text-top; */
+    display: block;
+    width: 100%;
+  }
+
+  ul li a {
+    display: block;
+    width: 100%;
+    height: 3rem;
+    align-content: center;
+  }
+
+  ul li a img {
+    vertical-align: text-top;
+    margin-right: 0.25rem;
   }
 
   .img-carousel {
@@ -363,5 +413,9 @@ footer span {
 
   .contact-btn {
     display: none;
+  }
+
+  .contact {
+    display: block;
   }
 }
