--- a/style.css
+++ b/style.css
@@ -25,8 +25,6 @@ header {
   justify-content: space-between;
   align-items: center;
 
-  box-sizing: border-box;
-
   /* background-color: #eee; */
   padding: 0rem 2rem;
 }
@@ -62,8 +60,8 @@ a:active {
 }
 
 .nav-bar {
-  /* display: block; */
-  /* position: relative; */
+  display: block;
+  position: relative;
 }
 
 .drawer-header {
@@ -90,6 +88,9 @@ a:active {
 .menu-btn {
   border: none;
   display: none;
+
+  text-align: center;
+  vertical-align: bottom;
 }
 
 .close-btn {
@@ -284,18 +285,9 @@ footer span {
   font-weight: bold;
 }
 
-.nav-bar {
-  /* display: none; */
-  position: fixed;
-  top: 0;
-  left: -250px;
-  /* width: 75%; */
-  width: 250px;
-  height: 100vh;
-  background-color: #fff;
-  box-shadow: 1px 1px rgba(0, 0, 0, 0.25);
-  border-radius: 0rem 1rem 1rem 0rem;
-  padding-left: 1rem;
+.contact,
+.hidden-icons {
+  display: none;
 }
 
 @media (max-width: 576px) {
@@ -304,13 +296,7 @@ footer span {
   }
   .menu-btn,
   .close-btn {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    /* vertical-align: bottom; */
-    justify-content: center;
-    height: 100%;
-    align-items: center;
+    display: block;
   }
 
   .menu-btn {
@@ -338,25 +324,20 @@ footer span {
   }
 
   .nav-bar {
-    /* display: none; */
-    position: fixed;
+    display: none;
+    position: absolute;
     top: 0;
-    left: -250px;
-    /* width: 75%; */
-    width: 250px;
+    left: 0;
+    width: 75%;
     height: 100vh;
     background-color: #fff;
     box-shadow: 1px 1px rgba(0, 0, 0, 0.25);
     border-radius: 0rem 1rem 1rem 0rem;
-    padding-left: 1rem;
   }
 
-  .nav-bar.open {
-    left: 0;
-  }
-
-  .contact {
-    display: none;
+  .contact,
+  .hidden-icons {
+    display: block;
   }
 
   .nav-items {
@@ -365,26 +346,28 @@ footer span {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     padding-left: 1rem;
-    padding-right: 0.5rem;
+    padding-right: 1rem;
 
-    gap: 3rem;
+    gap: 1rem;
     font-size: 1.25rem;
   }
 
   ul li {
-    font-weight: bold;
+    font-weight: block;
     /* vertical-align: text-top; */
     display: block;
     width: 100%;
   }
 
   ul li a {
-    display: block;
+    display: flex;
     width: 100%;
-    height: 3rem;
-    align-content: center;
+    gap: 1rem;
+    padding: 1rem 0rem;
+    /* height: 3rem; */
+    /* align-content: center; */
+    /* justify-content: center; */
   }
 
   ul li a img {
@@ -392,6 +375,9 @@ footer span {
     margin-right: 0.25rem;
   }
 
+  .img-carousel {
+    grid-template-columns: repeat(2, 1fr);
+  }
   .img-carousel {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -409,9 +395,5 @@ footer span {
 
   .contact-btn {
     display: none;
-  }
-
-  .contact {
-    display: block;
   }
 }
